--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./style/style.css?v=9">
+ <link rel="stylesheet" href="./style/style.css?v=10">
 
 </head>
 
@@ -106,7 +106,7 @@
       </section>
     </main>
 <!-- Floating SpriteSlime -->
-<img class="sprite-slime-float" src="assets/images/SpriteSlime.png" alt="Sprite slime" />
+<img class="sprite-slime-float" src="./assets/images/SpriteSlime.png" alt="Sprite slime" />
 
 <!-- Ground Mr Slime -->
 <img class="mrslime" src="assets/images/mrslime.png" alt="Mr slime" />
